<resources>
    <string name="app_name">BirthDates</string>

    <string name="title_people">People</string>
    <string name="title_events">Events</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_login">Login</string>

    <string name="form_username_hint">Username</string>
    <string name="form_password_hint">Password</string>

    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="form_email_hint">Email</string>
    <string name="title_home">Home</string>

    <!-- Preferences -->
    <string name="menu_title_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_template_settings">TemplateSettingsActivity</string>
    <string name="form_name_hint">Name</string>
    <string name="form_bday_hint">Birthday</string>
    <string name="form_description_hint">Description</string>
    <string name="form_date_hint">Date</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
</resources>
