<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.birthdates.ui.screens.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_people"
        android:name="com.example.birthdates.ui.screens.people.PeopleFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_people" >
        <action
            android:id="@+id/action_navigate_to_person_details"
            app:destination="@id/navigation_person_details"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_right"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/enter_from_right"
            app:popExitAnim="@anim/exit_to_right"
            app:popUpTo="@id/navigation_people" >
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.birthdates.ui.screens.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_person_details"
        android:name="com.example.birthdates.ui.screens.people.PersonDetails"
        android:label="PersonDetails"
        tools:layout="@layout/fragment_person_details"
        >
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

</navigation>
