<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_screen_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="top"
        android:orientation="vertical">

        <!-- Row - Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:weightSum="6">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_event_name_black_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_weight="5"
                android:hint="@string/form_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/form_name_hint"
                    android:background="@color/colorWhite"
                    android:editable="false"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Row - Description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:weightSum="6">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_description_black_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_weight="5"
                android:hint="@string/form_description_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:editable="false"
                    android:inputType="none"
                    android:singleLine="false"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Row - Date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:weightSum="6">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_add_event_black_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_main_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_weight="5"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/form_date_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_main_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:background="@color/colorWhite"
                    android:editable="false"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>