<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_screen_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Row - Image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_add_event_black_24" />
        </LinearLayout>

        <!-- Row - Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:hint="@string/form_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/form_name_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Row - Description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_description_hint"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/form_description_hint"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Row - Date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_event_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/form_date_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_main_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:inputType="date|datetime"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:gravity="center"
            android:text="Save" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>